--- a/team/templates/deployment.yaml
+++ b/team/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        date: "{{ now | unixEpoch }}"
         {{- include "team.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
