--- a/team/values.yaml
+++ b/team/values.yaml
@@ -5,10 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  repository: TODO
+  pullPolicy: Always
+  tag: "TODO"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -43,14 +42,14 @@ service:
   type: ClusterIP
   port: 80
 
+# TODO :
 ingress:
   enabled: false
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: "TODO"
       paths:
         - path: /
           pathType: ImplementationSpecific
